Tighten access in QexafsConstantVelocityScan & fix sonar warnings
Change-Id: Ibd7a40473df0d46351308944642861fdf3d13687